--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "name": "Launch Main",
             "request": "launch",
             "mainClass": "modelo.Main",
-            "projectName": "Aeropuerto_7cee9fcc" ,
+            "projectName": "Aeropuerto" ,
             "vmArgs": "--module-path ${env:PATH_TO_FX} --add-modules javafx.controls,javafx.fxml"
         },
         {
