--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,14 @@
         "c:\\Program Files (x86)\\Java\\javafx-sdk-16\\lib\\javafx.media.jar",
         "c:\\Program Files (x86)\\Java\\javafx-sdk-16\\lib\\javafx.swing.jar",
         "c:\\Program Files (x86)\\Java\\javafx-sdk-16\\lib\\javafx.web.jar",
-        "c:\\Program Files (x86)\\Java\\javafx-sdk-16\\lib\\javafx-swt.jar"
+        "c:\\Program Files (x86)\\Java\\javafx-sdk-16\\lib\\javafx-swt.jar",
+        "c:\\Users\\39E1\\Downloads\\javafx-sdk-17.0.0.1\\lib\\javafx.base.jar",
+        "c:\\Users\\39E1\\Downloads\\javafx-sdk-17.0.0.1\\lib\\javafx.controls.jar",
+        "c:\\Users\\39E1\\Downloads\\javafx-sdk-17.0.0.1\\lib\\javafx.fxml.jar",
+        "c:\\Users\\39E1\\Downloads\\javafx-sdk-17.0.0.1\\lib\\javafx.graphics.jar",
+        "c:\\Users\\39E1\\Downloads\\javafx-sdk-17.0.0.1\\lib\\javafx.media.jar",
+        "c:\\Users\\39E1\\Downloads\\javafx-sdk-17.0.0.1\\lib\\javafx.swing.jar",
+        "c:\\Users\\39E1\\Downloads\\javafx-sdk-17.0.0.1\\lib\\javafx.web.jar",
+        "c:\\Users\\39E1\\Downloads\\javafx-sdk-17.0.0.1\\lib\\javafx-swt.jar"
     ]
 }
